--- a/mobile/taskmanager/ios/Flutter/Generated.xcconfig
+++ b/mobile/taskmanager/ios/Flutter/Generated.xcconfig
@@ -2,7 +2,7 @@
 FLUTTER_ROOT=/opt/homebrew/Caskroom/flutter/3.24.1/flutter
 FLUTTER_APPLICATION_PATH=/Users/quantumcat/Documents/Semester 5/PBL4/mobile/taskmanager
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib/main.dart
+FLUTTER_TARGET=/Users/quantumcat/Documents/Semester 5/PBL4/mobile/taskmanager/lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
@@ -11,4 +11,4 @@ EXCLUDED_ARCHS[sdk=iphoneos*]=armv7
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.dart_tool/package_config.json
+PACKAGE_CONFIG=/Users/quantumcat/Documents/Semester 5/PBL4/mobile/taskmanager/.dart_tool/package_config.json
