Chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-mobile/taskmanager/build/app/outputs/
+mobile/taskmanager/build/
+mobile/taskmanager/.dart_tool/
 backend/obj/Debug/net8.0/backend.AssemblyInfo.cs
 backend/obj/Debug/net8.0/backend.AssemblyInfoInputs.cache
