--- a/mobile/taskmanager/pubspec.yaml
+++ b/mobile/taskmanager/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   intl: ^0.19.0
   hive: ^2.2.3
   build_runner: ^2.4.13
+  hive_flutter: ^1.1.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
