--- a/mobile/taskmanager/pubspec.yaml
+++ b/mobile/taskmanager/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   build_runner: ^2.4.13
   hive_flutter: ^1.1.0
   path_provider: ^2.1.4
+  get_it: ^8.0.0
 
 dev_dependencies:
   flutter_test:
