--- a/mobile/taskmanager/pubspec.yaml
+++ b/mobile/taskmanager/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   path_provider: ^2.1.4
   get_it: ^8.0.0
   sliver_tools: ^0.2.12
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
