--- a/mobile/taskmanager/pubspec.yaml
+++ b/mobile/taskmanager/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   get_it: ^8.0.0
   sliver_tools: ^0.2.12
   google_fonts: ^6.2.1
+  table_calendar: ^3.1.2
 
 dev_dependencies:
   flutter_test:
