--- a/mobile/taskmanager/pubspec.yaml
+++ b/mobile/taskmanager/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   google_fonts: ^6.2.1
   table_calendar:
     path: ./table_calendar-3.1.2-fork/
+  fluttertoast: ^8.2.8
   # flutter_abc: path: ./flutter_abcd-0.4.1-hijacking/
 
 dev_dependencies:
