--- a/mobile/taskmanager/pubspec.yaml
+++ b/mobile/taskmanager/pubspec.yaml
@@ -77,6 +77,8 @@ flutter:
     - assets/empty_task.png
     - assets/search.png
     - assets/error.png
+    - assets/welcome.png
+    - assets/full_logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
